--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
-.terraform/
-*.plan
+#  Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
 *.tfstate
+*.tfstate.*
+
+# .tfvars files
+*.tfvars
